<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".PlaySongForSpotify">


    <Button
        android:id="@+id/goBackBtnForSpotify"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:onClick="goBack"
        android:background="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/songTitleForSpotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder_title"
        android:textColor="#000000"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/songArtistForSpotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder_artist"
        android:textColor="#515151"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/songAlbumForSpotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder_album"
        android:textColor="#878787"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lyric_containerForSpotify"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:scrollbars="vertical"
        android:text="@string/lyrics_placeholder"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/elapsedTimeForSpotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <SeekBar
            android:id="@+id/timeBarForSpotify"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/endTimeForSpotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />
    </LinearLayout>


    <Button
        android:id="@+id/playBtnForSpotify"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/play" />

</LinearLayout>