<resources>
    <string name="app_name">MusicMoji</string>


    <string name="connect_now">Connect with Spotify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="instructions">Use the navigation bar to navigate. \n \n
        Server Songs contains some preloaded songs. \n \n
    Your Spotify Playlist contains songs loaded from your recent Spotify playlist history. \n \n
...
